# diffjudge

./: CHANGELOG.md  README.md  action.yml  pyproject.toml
src/diffjudge/: __init__.py  cli.py  github.py  llm.py  prompts.py  review.py
tests/: test_diffjudge.py
